# 1st-assignment-fastapi

./: ai_with_irfan_malik.ipynb  pyproject.toml
students_crud/: main.py
todo_app/: main.py
